# WorkoutTrackerV2

./: .dockerignore  .env.example  .gitignore  Dockerfile  Plan.md  README.md  docker-compose.prod.yaml  docker-compose.yaml  main.py  pyproject.toml  settings.example.toml
.github/workflows/: deploy.yml
bot/: __main__.py  config.py  logging_config.py
bot/data/: Exercises.csv  seed.py
bot/db/: session.py
bot/handlers/: __init__.py  exercises.py  history.py  start.py  workout.py
bot/keyboards/: exercises.py  history.py  workout.py
bot/middlewares/: db.py  user.py
bot/models/: __init__.py  exercise_muscles.py  exercises.py  muscles.py  sets.py  users.py  workout_exercises.py  workouts.py
bot/repositories/: __init__.py  exercise.py  workout.py
bot/states/: exercises.py  workout.py
bot/utils/: formatters.py
migrations/: env.py
migrations/versions/: 363413e23063_add_user_id_to_muscles.py  8837f7bc6a38_add_username_to_users.py  9496e70710d0_cascade_delete_exercise_muscles.py  e1138f89b589_init.py
