[project]
name = "workouttrackerv2"
version = "2.0.0"
description = "Telegram-bot for tracking workouts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.28.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
]
